--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -31,6 +31,23 @@
   padding-bottom: 1.5rem;
 }
 
+.paddingheader {
+  @media (min-width: $sm) {
+     padding: 4rem;
+  }
+
+
+  @media (min-width: $xl),
+  (min-width: $md) {
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+  }
+
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
+}
 
 
 .xPaddings {
