--- a/src/components/Experties/Experties.module.scss
+++ b/src/components/Experties/Experties.module.scss
@@ -1,77 +1,57 @@
-@import '../../styles/contants.scss';
-
 .wrapper {
-    background: white;
-
-    .container {
-        align-items: flex-start;
-        gap: 2rem;
-        flex-wrap: wrap;
-        >div {
-            flex: 1;
-        }
-
-        .leftSide {
-            display: flex;
-            flex-direction: column;
-            gap: 2rem;
-
-            .exp {
-                display: flex;
-                align-items: center;
-                border: 1px solid $secondary-white;
-                border-radius: 20px;
-                padding: 1.5rem;
-                gap: 2rem;
-                transition: all 200ms ease-out;
-
-                &:hover {
-                    cursor: pointer;
-                    box-shadow: 0px 21px 13px rgba(0, 0, 0, 0.04);
-                }
-
-                //icon circles
-                >:nth-child(1) {
-                    padding: 10px;
-                    width: 3rem;
-                    height: 3rem;
-                    border-radius: 999px;
-                }
-
-                //description
-                >:nth-child(2) {
-                    display: flex;
-                    flex-direction: column;
-                    gap: 1rem;
-
-                    >:nth-child(1) {
-                        font-size: 1.6rem;
-                        font-weight: bold;
-
-                    }
-                }
-            }
-        }
-
-
-
-        .rightSide {
-            @media (max-width: $sm) {
-                text-align: center;
-            }
-            display: flex;
-            flex-direction: column;
-            gap: 2rem;
-
-            .stats {
-                justify-content: flex-start;
-                gap: 4rem;
-
-                .stat {
-                    flex-direction: column;
-                    justify-content: flex-start;
-                }
-            }
-        }
+    padding: 20px;
+  }
+  
+  .container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  
+  .heading {
+    font-size: 2.5rem;
+    margin: 15px 0px 35px 0px;
+  }
+  
+  .productsGrid {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr); // Adjust the number of columns
+    gap: 20px;
+  }
+  
+  .productCard {
+    background-color: #f9f9f9;
+    border-radius: 10px;
+    overflow: hidden;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    cursor: pointer;
+    transition: box-shadow 0.3s ease;
+  
+    &:hover {
+      box-shadow: 0 6px 15px rgba(0, 0, 0, 0.2);
     }
-}
+  }
+  
+  .productImage {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+    transition: transform 0.3s ease;
+    border-radius: 10px;
+  }
+  
+  .productInfo {
+    padding: 15px;
+    text-align: center;
+  
+    h3 {
+      font-size: 1.2rem;
+      margin: 10px 0;
+    }
+  
+    p {
+      font-size: 1rem;
+      color: #555;
+    }
+  }
+  
