--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,11 +1,31 @@
 @import './../../styles/contants.scss';
 
+.logo {
+    display: flex;
+    align-items: center; 
+    margin-left: 7vh;
+
+    img {
+        height: 12vh;
+        width: 10vh;
+    }
+    .name {
+        font-size: 1.5rem;
+        font-weight: 500;
+        margin-left: 4px; 
+        margin-top: 8px;
+    }
+}
+
+
 .wrapper {
     position: relative;
     z-index: 99;
     opacity: 1;
     transform: none;
     position: sticky;
+    padding-block: 10px;
+    padding-inline: 4px;
     top: 0px;
     transition: all 300ms ease;
 
@@ -14,10 +34,6 @@
         justify-content: space-between;
         font-weight: 500;
 
-        .name {
-            font-size: 1.5rem;
-            font-weight: 500;
-        }
 
         .menu {
 
