aded the aboutus ,and projects page

--- a/src/styles/App.module.scss
+++ b/src/styles/App.module.scss
@@ -5,3 +5,9 @@
     position: relative;
     color: $primary;
 }
+.card_container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+  }
+  
