--- a/src/components/Projects/Project.module.scss
+++ b/src/components/Projects/Project.module.scss
@@ -15,19 +15,19 @@
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   transition: transform 0.3s ease-in-out;
   background-color: #fff;
-  margin: 0 auto; /* Center the cards horizontally */
+  margin: 0 auto; 
 }
 
 .cardImage {
   width: 100%;
-  height: 80%; /* Occupy most of the card for portrait layout */
+  height: 80%; 
   object-fit: cover; 
   border-radius: 10px 10px 0 0;
 }
 
 .cardContent {
   padding: 20px;
-  height: 20%; /* Adjust content height to fit new layout */
+  height: 20%; 
   display: flex;
   flex-direction: column;
   justify-content: center;
