--- a/src/components/Aboutus/aboutus.module.scss
+++ b/src/components/Aboutus/aboutus.module.scss
@@ -96,7 +96,7 @@
   
   .video_wrapper {
     position: relative;
-    padding-bottom: 56.25%; /* 16:9 aspect ratio */
+    padding-bottom: 56.25%; 
     height: 0;
     overflow: hidden;
     max-width: 100%;
