--- a/src/components/Projects/Project.module.scss
+++ b/src/components/Projects/Project.module.scss
@@ -8,8 +8,8 @@
 
 .card {
   position: relative;
-  width: 300px;  /* Adjust width for portrait */
-  height: 500px; /* Increase height for portrait */
+  width: 300px;  
+  height: 500px; 
   border-radius: 10px;
   overflow: hidden;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
