--- a/src/components/Contactus/ContactUs.module.scss
+++ b/src/components/Contactus/ContactUs.module.scss
@@ -1,76 +1,68 @@
 .contactUsContainer {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    gap: 20px;
-    padding: 50px;
-    background-color: #f9f9f9;
+  max-width: 1200px; /* Constrain content width */
+  margin: 0 auto; /* Center the content */
+  padding: 20px; /* Add padding */
+}
+
+.topSections {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap; /* Allow flex items to wrap on small screens */
+  gap: 20px; /* Add gap between items */
+  margin-bottom: 20px;
+}
+
+.infoSection {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  flex-wrap: wrap; /* Allow wrapping for smaller screens */
+}
+
+.about, .contact, .address {
+  flex: 1;
+  padding: 20px;
+  background-color: #9ecaed;
+  margin: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
+  min-width: 280px; /* Ensure minimum width on smaller screens */
+}
+
+.formMapContainer {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  gap: 20px; /* Add spacing between the form and map */
+}
+
+.contactForm, .map {
+  flex: 1;
+  min-width: 300px; /* Minimum width for smaller screens */
+}
+
+input, textarea {
+  width: 100%;
+  padding: 10px;
+  margin: 10px 0;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+button {
+  width: 100%;
+  padding: 10px;
+  background-color: #4CAF50;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  &:hover {
+    background-color: #45a049;
   }
-  
-  .contactForm {
-    flex: 1;
-    padding: 20px;
-    background-color: #fff;
-    border-radius: 10px;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-  }
-  
-  .contactForm h2 {
-    font-size: 2rem;
-    margin-bottom: 20px;
-    color: #333;
-    text-align: center;
-  }
-  
-  .contactForm form {
-    display: flex;
-    flex-direction: column;
-    gap: 15px;
-  }
-  
-  .contactForm input,
-  .contactForm textarea {
-    padding: 15px;
-    font-size: 1rem;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-  }
-  
-  .contactForm textarea {
-    height: 150px;
-  }
-  
-  .contactForm button {
-    padding: 15px;
-    font-size: 1.2rem;
-    color: #fff;
-    background-color: #007bff;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: background-color 0.3s ease-in-out;
-  }
-  
-  .contactForm button:hover {
-    background-color: #0056b3;
-  }
-  
-  .map {
-    flex: 1;
-    padding: 20px;
-  }
-  
-  .map h2 {
-    font-size: 2rem;
-    margin-bottom: 20px;
-    color: #333;
-    text-align: center;
-  }
-  
-  iframe {
-    width: 100%;
-    border: 0;
-    border-radius: 10px;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-  }
-  
+}
+
+iframe {
+  width: 100%;
+  height: 100%; /* Ensure the map scales properly */
+}
